# pycronofy

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS  LICENCE.txt  LISCENSE.txt  MANIFEST.in  Makefile  PKG-INFO  README.md  coverage.rc  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
PyCronofy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pycronofy/: __init__.py  auth.py  batch.py  client.py  datetime_utils.py  exceptions.py  pagination.py  request_handler.py  settings.py  validation.py
pycronofy/tests/: common_data.py  test_application_calendar.py  test_auth.py  test_availability.py  test_batch.py  test_client.py  test_conferencing_services.py  test_custom_datacenter.py  test_data.py  test_datetime_utils.py  test_pagination.py  test_real_time_scheduling.py  test_real_time_sequencing.py  test_request_handler.py  test_validation.py
requirements/: core.txt  tests.txt
