[project]
name = "PyCronofy"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.20.0",
    "pytz>=2013.7",
]
description = 'Python library for Cronofy'
authors = [
    {name = "VenueBook", email = "dev@venuebook.com"},
    {name = "Cronofy", email = "support@cronofy.com"},
]

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
